force-app/main/default/objects/Samples__c/Samples__c.object-meta.xml
<CustomObject>
    <label>Samples</label>
    <nameField>
        <label>Samples Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sampless</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>