force-app/main/default/objects/Samples__c/fields/Pharma_Product__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Product__c</fullName>
    <label>Pharma Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>