force-app/main/default/objects/Samples__c/fields/Sample_Code__c.field-meta.xml
<CustomField>
    <fullName>Sample_Code__c</fullName>
    <defaultValue>18</defaultValue>
    <label>Sample Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>