force-app/main/default/objects/Samples__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Pharma__c</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Sampless</relationshipName>
    <type>Lookup</type>
</CustomField>